Fix font size on mobile.

--- a/content/styles/main.less
+++ b/content/styles/main.less
@@ -8,6 +8,7 @@ body {
   max-width: 800px - 2*20px;
   min-width: 400px;
   font: 11pt/1.6 'Open Sans', Verdana, Arial, sans-serif;
+  -webkit-text-size-adjust: 100%;
 }
 
 a {
